<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_channel_name">Load app channel</string>
    <string name="notification_channel_desc">This channel is used to notify the user with status of downloaded files</string>
    <string name="notification_channel_id">channelId</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide">Glide - Image Loading Library by BumbTech</string>
    <string name="repo">LoadApp -  Current Repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP Client for Android and Java by Square, Inc</string>
    <string name="no_selection">Please select an option first</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="fail">Fail</string>
    <string name="ok">Ok</string>
    <string name="success">Success</string>
    <string name="timeout">Timeout</string>
</resources>
